opam-version: "2.0"
maintainer: "ilya@zilliqa.com"
authors: ["Zilliqa Research Pvt. Ltd."]
homepage: "https://scilla-lang.org"
bug-reports: "https://github.com/Zilliqa/scilla/issues"
dev-repo: "git+https://github.com/Zilliqa/scilla.git"
license: "GPL-3.0"
depends: [
  "ocaml" {>= "4.06.1" & < "4.08~"}
  "dune" {build & >= "1.5"}
  "menhir"
  "core" {>= "v0.11" & < "v0.12~"}
  "batteries" {>= "2.9.0" & < "2.10~"}
  "bitstring" {>= "3.1.0" & < "3.2~"}
  "angstrom" {>= "0.11.0" & < "0.12~"}
  "bisect_ppx" {>= "1.4.0" & < "1.5~"}
  "ctypes" {>= "0.14.0" & < "0.16~"}
  "ctypes-foreign" {>= "0.4.0" & < "0.5~"}
  "fileutils" {>= "0.5.3" & < "0.6~"}
  "hex" {>= "1.3.0" & < "1.5~"}
  "yojson" {>= "1.7.0" & < "1.8~"}
  "ocaml-protoc" {>= "1.2.0" & < "1.3~"}
  "ppx_deriving" {>= "4.2.1" & < "4.5~"}
  "ppx_sexp_conv" {>= "v0.11.2" & < "v0.12~"}
  "ppx_deriving_rpc" {>= "5.9.0" & < "5.10~"}
  "secp256k1" {>= "0.4.0" & < "0.5~"}
  "stdint" {>= "0.5.1" & < "0.6~"}
  "ounit" {with-test & (>= "2.0.8" & < "2.1~")}
]
build: [
  [ "dune" "build" "-j" jobs "@install" ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
synopsis: "Scilla-base: Base component of Scilla"
description: """
This is provided to make it easier to work with the Scilla functionalities.
"""

