opam-version: "1.2"
maintainer: "ilya.sergey@gmail.com"
authors: ["Ilya Sergey"]
homepage: "https://scilla-lang.org/"
bug-reports: "https://gitter.im/Zilliqa/SmartContract"
dev-repo: "https://github.com/Zilliqa/scilla.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta14"}
]
