opam-version: "2.0"
maintainer: "ilya@zilliqa.com"
authors: ["Zilliqa Research Pvt. Ltd."]
homepage: "https://scilla-lang.org"
bug-reports: "https://github.com/Zilliqa/scilla/issues"
dev-repo: "git+https://github.com/Zilliqa/scilla.git"
license: "GPL-3.0"
depends: [
  "ocaml" {>= "4.08.0" & < "4.11~"}
  "dune" {>= "2.0"}
  "menhir"
  "core" {>= "v0.14.0" & < "v0.15~"}
  "bitstring" {>= "3.1.0" & < "3.2~"}
  "angstrom" {>= "0.11.0" & < "0.14~"}
  "bisect_ppx" {>= "2.0.0" & < "2.3~"}
  "cryptokit" {>= "1.13" & < "1.15~"}
  "ctypes" {>= "0.14.0" & < "0.18~"}
  "ctypes-foreign" {>= "0.4.0" & < "0.5~"}
  "fileutils" {>= "0.5.3" & < "0.7~"}
  "hex" {>= "1.3.0" & < "1.5~"}
  "yojson" {>= "1.7.0" & < "1.8~"}
  "ocaml-protoc" {>= "1.2.0" & < "2.1~"}
  "ppx_deriving" {>= "4.2.1" & < "4.5~"}
  "ppx_sexp_conv" {>= "v0.14.0" & < "v0.15~"}
  "ppx_compare" {>= "v0.14.0" & < "v0.15~"}
  "ppx_deriving_rpc" {>= "6.0.0" & < "8.0~"}
  "secp256k1" {>= "0.4.0" & < "0.5~"}
  "stdint" {>= "0.5.1" & < "0.7~"}
  "ounit" {>= "2.0.8" & < "2.3~"}
  "patdiff" {>= "v0.14.0" & < "v0.15~"}
  "conf-cmake" {build}
  "conf-gcc" {build}
  "conf-g++" {build}
  "conf-m4" {build}
  "conf-pkg-config" {build}
  "conf-boost"
  "conf-gmp"
  "conf-libffi"
  "conf-libpcre"
  "conf-openssl"
  "conf-secp256k1"
  "conf-zlib"
]
build: [
  [ "./scripts/libff.sh" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]
synopsis: "Scilla: Safe-By-Design Smart Contract Language"
description: """
Scilla, short for Smart Contract Intermediate-Level Language,
is an intermediate-level smart contract language being developed for Zilliqa.
Scilla has been designed as a principled language with smart contract safety in mind.
Scilla imposes a structure on smart contracts that will make applications less
vulnerable to attacks by eliminating certain known vulnerabilities directly at
the language-level. Furthermore, the principled structure of Scilla will make
applications inherently more secure and amenable to formal verification.
The language is being developed hand-in-hand with formalization of its semantics and
its embedding into the Coq proof assistant — a state-of-the art tool for
mechanized proofs about properties of programs.
"""
