opam-version: "2.0"
maintainer: "ilya@zilliqa.com"
authors: ["Zilliqa Research Pvt. Ltd."]
homepage: "https://scilla-lang.org"
bug-reports: "https://github.com/Zilliqa/scilla/issues"
dev-repo: "git+https://github.com/Zilliqa/scilla.git"
license: "GPL-3.0-only"
depends: [
  "angstrom" {>= "0.11.0" & < "0.16~"}
  "bisect_ppx" {>= "2.0.0" & < "2.9~"}
  "bitstring" {>= "3.1.0" & < "4.2~"}
  "camlp-streams" {>= "5.0.1" & < "5.1~"}
  "conf-boost"
  "conf-cmake" {build}
  "conf-gcc" {build}
  "conf-gmp"
  "conf-g++" {build}
  "conf-libffi"
  "conf-libpcre"
  "conf-m4" {build}
  "conf-openssl"
  "conf-pkg-config" {build}
  "conf-zlib"
  "core" {>= "v0.15.0" & < "v0.16~"}
  "core_unix" {>= "v0.15.0" & < "v0.16~"}
  "dune" {>= "2.0"}
  "cryptokit" {>= "1.13" & < "1.18~"}
  "ctypes" {>= "0.14.0" & < "0.21~"}
  "ctypes-foreign"
  "fileutils" {>= "0.5.3" & < "0.7~"}
  "hex" {>= "1.3.0" & < "1.6~"}
  "menhir"
  "ocaml" {>= "4.11.0" & < "4.15~"}
  "ocaml-protoc" {>= "1.2.0" & < "2.3~"}
  "ounit" {>= "2.0.8" & < "2.2.6"}
  "patdiff" {>= "v0.15.0" & < "v0.16~"}
  "ppx_deriving" {>= "4.2.1" & < "5.3~"}
  "ppx_sexp_conv" {>= "v0.15.0" & < "v0.16~"}
  "ppx_compare" {>= "v0.15.0" & < "v0.16~"}
  "ppx_deriving_rpc" {>= "6.0.0" & < "10.0~"}
  "secp256k1" {>= "0.4.4" & < "0.5~"}
  "stdint" {>= "0.5.1" & < "0.8~"}
  "yojson" {>= "1.7.0" & < "2.1~"}
]
build: [
  [ "./scripts/build_deps.sh" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]
synopsis: "Scilla: Safe-By-Design Smart Contract Language"
description: """
Scilla, short for Smart Contract Intermediate-Level Language,
is an intermediate-level smart contract language being developed for Zilliqa.
Scilla has been designed as a principled language with smart contract safety in mind.
Scilla imposes a structure on smart contracts that will make applications less
vulnerable to attacks by eliminating certain known vulnerabilities directly at
the language-level. Furthermore, the principled structure of Scilla will make
applications inherently more secure and amenable to formal verification.
The language is being developed hand-in-hand with formalization of its semantics and
its embedding into the Coq proof assistant — a state-of-the art tool for
mechanized proofs about properties of programs.
"""
