opam-version: "1.2"
name: "secp256k1"
version: "0.1.5"
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: "Davide Gessa <gessadavide@gmail.com>"
homepage: "https://github.com/dakk/secp256k1-ml"
bug-reports: "https://github.com/dakk/secp256k1-ml/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/secp256k1-ml"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta9"}
  "base" {build & >= "v0.9.2"}
  "stdio" {build & >= "v0.9.0"}
]

depexts: [
  [["ubuntu"] ["libsecp256k1-dev" "libsecp256k1"]]
  [["gentoo"] ["libsecp256k1"]]
  [["debian"] ["libsecp256k1-dev" "libsecp256k1"]]
  [["archlinux"] ["libsecp256k1-git"]]
]
