opam-version: "1.2"
name: "secp256k1"
version: "0.4.0"
maintainer: "Davide Gessa <gessadavide@gmail.com>"
authors: [
  "Davide Gessa <gessadavide@gmail.com>"
  "Vincent Bernardoff <vb@luminar.eu.org>"
  "Yoichi Hirai <i@yoichihirai.com>"
]

homepage: "https://github.com/dakk/secp256k1-ml"
bug-reports: "https://github.com/dakk/secp256k1-ml/issues"
license: "MIT"
dev-repo: "git+https://github.com/dakk/secp256k1-ml"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "base" {build & >= "v0.9.2"}
  "stdio" {build & >= "v0.9.0"}
  "configurator" {build & >= "v0.9.1"}
  "hex" {test & >= "1.1.1"}
  "alcotest" {test & >= "0.8.1"}
  "base-bigarray"
]

depexts: []
