(rule
  (deps ParserFaults.messages)
  (targets ParserFaults.ml)
  (action
    (with-stdout-to ParserFaults.ml
      (run menhir --compile-errors ParserFaults.messages ScillaParser.mly)))
)

(ocamllex
  (modules ScillaLexer))

(menhir
 (flags "--table")
 (modules ScillaParser))

(library
 (name scilla_base) (public_name scilla-base)
  (wrapped false)
  (libraries core ppx_sexp_conv
              hex stdint batteries
              ppx_deriving.show
              secp256k1 bitstring
              yojson scilla_cpp_deps scilla_util
              menhirLib)
  (preprocess (pps ppx_sexp_conv
                    ppx_let
                    ppx_deriving.show
                    bisect_ppx -exclude-file=../../bisect.exclude -conditional
                    ))
  (synopsis "Scilla workbench implementation."))
