(rule
  (targets config_j.ml config_j.mli)
  (deps    config.atd)
  (mode    fallback)
  (action  (run atdgen -j %{deps})))

(rule
  (targets config_t.ml config_t.mli)
  (deps    config.atd)
  (mode    fallback)
  (action  (run atdgen -t %{deps})))

(library
 (name scilla_bench)
 (library_flags -linkall)
 (modules
   config contract transition expression
   config_t config_j env runner)
 (libraries
   core core_bench yojson atdgen
   scilla_base scilla_eval scilla_util stateIPCTest)
 (preprocess (pps ppx_sexp_conv ppx_inline_test)))

(env (dev (flags (:standard -warn-error -A))))
