(library
 (name scilla_cpp_deps)
 (public_name scilla-cpp-deps)
  (wrapped false)
  (libraries ctypes ctypes.foreign cryptokit)
  (cxx_names c_schnorr DataConversion Schnorr)
  (cxx_flags -std=c++11)
  ;; This is to link to OpenSSL on Mac.
  (ocamlopt_flags (-ccopt -L/usr/local/opt/openssl@1.1/lib))
)
