(library
 (name scilla_server_lib)
 (public_name scilla.server_lib)
 (wrapped true)
 (libraries core threads unix rresult rpclib rpclib.json rpclib.cmdliner
   scilla_base scilla_eval)
 (modes byte native)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving_rpc ppx_deriving.show))
 (synopsis "Scilla workbench implementation."))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
