(install
 (section lib)
 (package scilla)
 (files
  (BoolUtils.scillib as stdlib/BoolUtils.scillib)
  (IntUtils.scillib as stdlib/IntUtils.scillib)
  (ListUtils.scillib as stdlib/ListUtils.scillib)
  (NatUtils.scillib as stdlib/NatUtils.scillib)
  (PairUtils.scillib as stdlib/PairUtils.scillib)
  (Conversions.scillib as stdlib/Conversions.scillib)
  (CryptoUtils.scillib as stdlib/CryptoUtils.scillib)
  (Polynetwork.scillib as stdlib/Polynetwork.scillib)))
