opam-version: "2.0"
name: "vcpkg-secp256k1"
synopsis: "Elliptic curve library secp256k1 wrapper for Ocaml"
description: """
This library wrap the secp256k1 EC(DSA) library into an OCaml library. At the moment only a subset of functionalities are available:
- Context: create, clone, destroy, randomize
- Elliptic curve: public key creation
- ECDSA: verify, sign, recover

All exchanged data (pubkey, signature, seckey) are represented as hex strings.

Forked from https://github.com/dakk/secp256k1-ml and changed to use the secp256k1 compiled by vcpkg.
"""
version: "1.0"
maintainer: "Zilliqa"
homepage: "https://github.com/Zilliqa/scilla"
bug-reports: "https://github.com/Zilliqa/scilla/issues"
license: "MIT"
dev-repo: "git+https://github.com/Zilliqa/scilla"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {>= "1.0"}
  "base" {build & >= "v0.9.2"}
  "stdio" {build & >= "v0.9.0"}
  "dune-configurator" {build & >= "1.0"}
  "hex" {with-test & >= "1.1.1"}
  "alcotest" {with-test & >= "0.8.1"}
  "odoc" {with-test & >= "1.3.0"}
  "base-bigarray"
]

depexts: []
