(library
 (name scilla_crypto)
 (public_name scilla.crypto)
 (wrapped true)
 (libraries ctypes ctypes.foreign cryptokit)
 (preprocess
  (pps ppx_compare))
 (modes byte native)
 (foreign_stubs
  (language cxx)
  (names c_schnorr Snark c_snark)
  ;;; -lstdc++ is not portable, it can be e.g. -lc++
  (flags
   -std=c++11
   -fPIC
   (:include c_flags.sexp))
  (include_dirs %{project_root}/deps/libff/install/include %{project_root}/deps/schnorr/install/include))
 ; foreign_archives does not support %{vars} hence the relative path to deps/
 (foreign_archives ../../../deps/libff/install/lib/ff ../../../deps/schnorr/install/lib/Schnorr)
 (c_library_flags
  -lstdc++
  (:include c_library_flags.sexp))
 (library_flags
  (:include library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
