(library
 (name scilla_crypto)
 (public_name scilla.crypto)
 (wrapped true)
 (libraries ctypes ctypes.foreign cryptokit)
 (preprocess
  (pps ppx_compare))
 (modes byte native)
 (foreign_stubs
  (language cxx)
  (names c_schnorr c_snark)
  ;;; -lstdc++ is not portable, it can be e.g. -lc++
 ;; See config/discover.ml for how we pass the flags (-I & -L)
 ;; so it can find Schnorr & CryptoUtils below.
  (flags
   -std=c++17
   -fPIC
   (:include c_flags.sexp)))
 (c_library_flags
  -lstdc++
  -lSchnorr
  -lCryptoUtils
  (:include c_library_flags.sexp))
 (library_flags
  (:include library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
