(ocamllex
  (modules ScillaLexer))

(menhir
 (modules ScillaParser))

(library
 (name scilla_base)
  (wrapped false)
  (libraries core ppx_sexp_conv
              num hex stdint batteries
              ppx_deriving.show
              cryptokit secp256k1 bitstring
              yojson scilla_cpp_deps scilla_util)
  (preprocess (pps ppx_sexp_conv
                    ppx_let 
                    ppx_deriving.show
                    bisect_ppx -exclude-file=../../bisect.exclude -conditional
                    ))
  (synopsis "Scilla workbench implementation."))
