(library
 (name scilla_eval)
  (wrapped false)
  (libraries core
              angstrom stdint
              ppx_sexp_conv ppx_deriving batteries
              ppx_let yojson cryptokit scilla_base)
  (preprocess (pps ppx_sexp_conv
                    ppx_let
                    bisect_ppx -conditional
                    ppx_deriving.show))
  (synopsis "Scilla workbench implementation."))
