(include_subdirs unqualified)

(library
 (modes byte native)
 (name testparser)
 (modules All Bad)
 (wrapped true)
 (libraries core_kernel oUnit scilla_test))

(executable
 (modes byte native)
 (name parser_dummy)
 (public_name parser-dummy)
 (modules Parser_dummy)
 (libraries core_kernel scilla_base))
