(library
 (name secp256k1)
 (public_name secp256k1)
 (libraries bigarray)
 (c_names secp256k1_wrap)
 (c_flags
  (:include c_flags.sexp))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:< config/discover.exe))
 (action
  (run %{<})))
